--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="navbar">
       <div class="container">
-        <h1>CTO Reading List</h1>
+        <h1>Tech Reading List</h1>
         <nav>
           <ul>
             <li><a href="#categories">Categories</a></li>
